fix(NOT-267): make departmentID optional for send
