# src/lambdas/interfaces/IAnalyticsSchema.ts
@@ -5,7 +5,8 @@ export const IAnalyticsSchema = z.object({
   EventID: z.string(),
   NotificationID: z.string(),
   CampaignID: z.string().optional(),
-  DepartmentID: z.string(),
+  DepartmentID: z.string().optional(),
+  OrganisationID: z.string().optional(),
   APIGWExtendedID: z.string().optional(),
   EventDateTime: z.string(),
   Event: z.enum(NotificationStateEnum).optional().default(NotificationStateEnum.UNKNOWN),
