# src/lambdas/pso/sqs.processing/handler.test.unit.ts
@@ -137,8 +137,8 @@ describe('Processing QueueHandler', () => {
         ...mockEvent.Records[0],
         body: {
           // Set DepartmentID to undefined on purpose
+          NotificationID: 'invalid-notification-id',
           UserID: 'invalid-id',
-          DepartmentID: undefined,
           NotificationTitle: 'Boom',
           NotificationBody: 'psst',
         },
@@ -363,7 +363,7 @@ describe('Processing QueueHandler', () => {
     expect(serviceMocks.analyticsServiceMock.publishEvent).not.toHaveBeenCalled();
   });
 
-  it('should log when a message has no NotificationID or DepartmentID', async () => {
+  it('should log when a message has an invalid NotificationID', async () => {
     // Act
     const result = handler(mockUnidentifiableEvent, mockContext);
 
@@ -371,10 +371,10 @@ describe('Processing QueueHandler', () => {
     await expect(result).rejects.toThrow(FullBatchFailureError);
     expect(observabilityMocks.logger.error).toHaveBeenCalledWith(
       `Supplied message does not contain NotificationID or DepartmentID, rejecting record`,
-      {
-        error: '✖ Invalid input: expected string, received undefined\n  → at body.DepartmentID',
+      expect.objectContaining({
+        error: expect.stringContaining('body.NotificationID'),
         raw: mockUnidentifiableEvent.Records[0].body,
-      }
+      })
     );
   });
 
